# GeneticSudokuSolver

./: .gitignore  CMakeLists.txt  Config.txt  LICENSE  README.md  resultExtractor.py  wykresy.ipynb
inc/: ConfigLoader.h  Fitest.h  Genotype.h  Logger.h  Population.h  RandomNumGenerator.h  SudokuLoader.h  phenotype.h
src/: ConfigLoader.cpp  Fitest.cpp  Genotype.cpp  Logger.cpp  Population.cpp  SudokuLoader.cpp  main.cpp
testData/: 1.txt  1hard.txt  1mid.txt
